--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 MPFE
 =====
 
-Estimate distribution of methylation patterns from a table of counts from a
+Estimate the distribution of methylation patterns from a table of counts from a
 bisulphite sequencing experiment given a non-conversion rate and read error
 rate.
 
